# pixar-render

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/pixar_render/: __init__.py  pangocairo_render.py  processor.py
tests/: test_packed_window.py
